--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -5,10 +5,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Pull docker hadolint
         run: docker pull hadolint/hadolint
       - name: Output Version
         run: docker run --rm hadolint/hadolint hadolint --version
       - name: Run Lint
         run: docker run --rm -i hadolint/hadolint < Dockerfile
+
+  Build:
+    runs-on: ubuntu-latest
+    needs: Lint
+    steps:
+      - name: Check out
+        uses: actions/checkout@v4
